tests/sqlite/ui-common/section_sql_param_only_in_top_map.stderr
error: sql_forge!: parameter :id is unused in the SQL template
  --> tests/sqlite/tmp-ui/section_sql_param_only_in_top_map.rs:10:12
   |
10 |         ( :id = 1i64 ),
   |            ^^
